--- a/src/style/style.css
+++ b/src/style/style.css
@@ -1,5 +1,28 @@
-body{
+canvas {
+  display: flex;
+  align-content: flex-start;
+}
+
+btnI {
+  display: flex;
+
+  align-items: center;
+  justify-content: center;
+  align-content: center;
+
+}
+
+html,
+body {
+  width: 100%;
+  height: 100%;
+}
+
+body {
+  background-color: #ffffff;
   margin: 0;
+  overflow: hidden;
+  font-family: arial;
 }
 #blocker {
 
