--- a/src/style/style.css
+++ b/src/style/style.css
@@ -62,3 +62,44 @@ body {
   cursor: pointer;
 
 }
+/* loading spinner */
+.spinner{
+  display: inline-block;
+  padding: 5rem;
+  border-radius: 50%;
+  animation: rotate 0.7s linear infinite;
+  background: linear-gradient(90deg, black 0%, red 53%);
+}
+.spinner::after{
+  content: " ";
+  background: black;
+  position: absolute;
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  border-radius: 50%;
+  margin: 10px;
+}
+@keyframes rotate { 
+  from{
+    transform: rotate(0deg)
+  }
+  to{
+    transform: rotate(360deg)
+  }
+}
+#modal-loading-content {
+  background-color: black !important;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+#modal-loading-footer {
+  color: white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
